fix homepage alignment and use yarn

--- a/app/global.css
+++ b/app/global.css
@@ -1,3 +1,13 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer base {
+  /** Need to do this because fumadocs preset is overriding custom breakpoints. For: navbar, footer */
+  .max-w-fd-container {
+    @apply !max-w-screen-xl md:!px-0;
+  }
+  .container {
+    @apply !max-w-screen-xl md:!px-0;
+  }
+}
